# PvZ-Xenon

./: .gitignore  README.md  README_EN.md  README_ES.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/xenon/core/: arm32_hook.cpp  arm32_hook.h  hook.cpp  hook.h  logger.h  xenon.cpp  xenon.h
app/src/main/cpp/xenon/hooks/: hook_registry.cpp  hook_registry.h
app/src/main/cpp/xenon/original/: original_jni.cpp  original_jni.h  original_symbols.cpp  original_symbols.h
app/src/main/cpp/xenon/reconstructed/: reconstructed_symbols.cpp  reconstructed_symbols.h
app/src/main/cpp/xenon/sexy/: sexy_types.h
decompiled/: AndroidManifest.xml  apktool.yml
decompiled/original/: AndroidManifest.xml
decompiled/res/mipmap-anydpi-v26/: set.xml
decompiled/res/values/: colors.xml
decompiled/smali/com/trans/: ACPManager$RawData.smali  ACPManager.smali  GLSurfaceView$1.smali  GLSurfaceView$BaseConfigChooser.smali  GLSurfaceView$ComponentSizeChooser.smali  GLSurfaceView$DefaultContextFactory.smali  GLSurfaceView$DefaultWindowSurfaceFactory.smali  GLSurfaceView$EGLConfigChooser.smali  GLSurfaceView$EGLContextFactory.smali  GLSurfaceView$EGLWindowSurfaceFactory.smali  GLSurfaceView$EglHelper.smali  GLSurfaceView$GLThread.smali  GLSurfaceView$GLThreadManager.smali  GLSurfaceView$GLWrapper.smali  GLSurfaceView$LogWriter.smali  GLSurfaceView$Renderer.smali  GLSurfaceView$SimpleEGLConfigChooser.smali  (+54 more)
docs/: IDA_HOOKS_EN.md  IDA_HOOKS_ES.md
scripts/: export_game_symbols.ps1
(+26 files in other folders)
